Closed
Bug 412023
Opened 18 years ago
Closed 18 years ago
Table overflows the ftp listings page
Categories
(Core :: Networking, defect)
Core
Networking
Tracking
()
VERIFIED
FIXED
mozilla1.9beta3
People
(Reporter: unghost, Assigned: dao)
References
()
Details
(Keywords: regression)
Attachments
(1 file)
|
1.49 KB,
patch
|
roc
:
review+
roc
:
superreview+
mtschrep
:
approval1.9+
|
Details | Diff | Splinter Review |
STR:
1. Open ftp://ftp.mozilla-russia.org/test/
2) Set encoding to UTF-8
Actual result:
Table overflows the ftp listings page
Expected result:
Table doesn't overflows the ftp listings page
Additional details:
Screenshot is https://bugzilla.mozilla.org/attachment.cgi?id=296621
I've managed to find regression range: it regressed between 2007-09-21 and 2007-09-23 therefore I suspect it's regression from Bug 396992
Cc'ing Dão Gottwald and Michael Ventnor
Updated•18 years ago
|
Component: OS Integration → Networking
Product: Firefox → Core
QA Contact: os.integration → networking
| Assignee | ||
Comment 1•18 years ago
|
||
We've been assuming that text is allowed to wrap after an ellipsis (bug 393681 comment 13). So I think this is a layout regression.
| Assignee | ||
Comment 2•18 years ago
|
||
Assignee: nobody → dao
Status: NEW → ASSIGNED
Attachment #297057 -
Flags: superreview?(bzbarsky)
Attachment #297057 -
Flags: review?(bzbarsky)
Comment 3•18 years ago
|
||
Comment on attachment 297057 [details] [diff] [review]
patch
I'm probably the wrong person to review this (e.g. I have no idea whether ZWSP or ZWNJ is the right thing here).
Attachment #297057 -
Flags: superreview?(roc)
Attachment #297057 -
Flags: superreview?(bzbarsky)
Attachment #297057 -
Flags: review?(roc)
Attachment #297057 -
Flags: review?(bzbarsky)
Comment on attachment 297057 [details] [diff] [review]
patch
Should you be using the localized ellipsis entity here?
Attachment #297057 -
Flags: superreview?(roc)
Attachment #297057 -
Flags: superreview+
Attachment #297057 -
Flags: review?(roc)
Attachment #297057 -
Flags: review+
| Assignee | ||
Updated•18 years ago
|
Attachment #297057 -
Flags: approval1.9?
| Assignee | ||
Comment 5•18 years ago
|
||
(In reply to comment #4)
> (From update of attachment 297057 [details] [diff] [review])
> Should you be using the localized ellipsis entity here?
Bug 411854 is filed for this.
Updated•18 years ago
|
Attachment #297057 -
Flags: approval1.9? → approval1.9+
Updated•18 years ago
|
Keywords: checkin-needed
Comment 6•18 years ago
|
||
Checking in netwerk/streamconv/converters/nsIndexedToHTML.cpp;
/cvsroot/mozilla/netwerk/streamconv/converters/nsIndexedToHTML.cpp,v <-- nsIndexedToHTML.cpp
new revision: 1.89; previous revision: 1.88
done
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M11
Comment 7•18 years ago
|
||
verified fixed using Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9b3pre) Gecko/2008011604 Minefield/3.0b3pre and the latest Win Vista nightly. I verified by following the STR in Comment 0.
Status: RESOLVED → VERIFIED
| Assignee | ||
Updated•18 years ago
|
Flags: blocking1.9?
You need to log in
before you can comment on or make changes to this bug.
Description
•