Bug 412023 - "Table overflows the ftp listings page" [p=dao@mozilla.com (Dão Gottwald) r+sr=roc a1.9=schrep]